--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
   "name": "spec-web",
   "version": "0.1.0",
-  "private": true,
+  "license": "gpl-3.0",
+  "author": {
+    "name": "Will Anderson",
+    "email": "will@willand.co",
+    "url": "https://spec.willand.co"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "generate-posts": "node src/posts/util/generate.js",
+    "watch-posts:partial": "onchange 'src/posts/raw/*.md' 'src/posts/util/**/*.*' -- npm run generate-posts",
+    "watch-posts": "npm run generate-posts && npm run watch-posts:partial",
+    "gather-licenses": "npm-license-crawler --dependencies --relativeLicensePath --json ./public/licenses.json",
+    "pre:build": "./prepare-build.sh && npm run generate-posts && npm run gather-licenses",
+    "serve": "npm run pre:build && vue-cli-service serve --mode development",
+    "build:prod": "npm run pre:build && vue-cli-service build --mode production",
+    "build:dev": "npm run pre:build && vue-cli-service build --mode development",
+    "build": "npm run build:prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "highlight.js": "^9.15.6",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
+    "showdown-highlight": "^2.1.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-matomo": "git://github.com/willand31/vue-matomo.git#update-script",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
+    "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.123",
     "@vue/cli-plugin-babel": "^3.6.0",
     "@vue/cli-plugin-typescript": "^3.6.0",
     "@vue/cli-service": "^3.6.0",
     "node-sass": "^4.9.0",
+    "npm-license-crawler": "^0.2.1",
+    "onchange": "^5.2.0",
     "sass-loader": "^7.1.0",
+    "showdown": "^1.9.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "typescript": "^3.4.3",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   }
 }
