--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "highlight.js": "^9.15.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "showdown-highlight": "^2.1.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-infinite-scroll": "^2.0.2",
@@ -42,8 +41,10 @@
     "node-sass": "^4.9.0",
     "npm-license-crawler": "^0.2.1",
     "onchange": "^5.2.0",
+    "prerender-spa-plugin": "^3.4.0",
     "sass-loader": "^7.1.0",
     "showdown": "^1.9.0",
+    "showdown-highlight": "^2.1.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "typescript": "^3.4.3",
